# py_audio2face

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
docs/: py_audio2face_icon.xcf
py_audio2face/: __init__.py  audio2face.py  settings.py  utils.py
py_audio2face/assets/: mark_arkit_solved_default.usd  mark_arkit_solved_streaming.usd
py_audio2face/modules/: _audio2emotion.py  _export.py  _general.py  _player.py  _server.py  _streaming.py  a2f_audio2emotion.py  a2f_export.py  a2f_player.py
py_audio2face/modules/clients/: _grpc_client.py  _http_client.py
py_audio2face/modules/clients/grpc_stub/: audio2face_pb2_grpc.py
tests/: emotion_full.usd_bsweight.usd  emotion_less.usd_bsweight.usd  myout1.usd_bsweight.usd  myoutemotion.usd_bsweight.usd  simple_test.py  test_audio2face.py  test_simple.py
